# VTKDicomPicView

./: AChartView.qml  BChartView.qml  CMakeLists.txt  GChartView.qml  RChartView.qml  main.qml  qml.qrc
src/: main.cpp  mydialog.cpp  mydialog.h  opendcm.cpp  opendcm.h  rewriteinteractor.cpp  rewriteinteractor.h  rgbachange.cpp  rgbachange.h
